# 5270-Final-Project

./: .gitignore  README.md  pyproject.toml
docs/: report.html
docs/assets/: duration_delay_tradeoff.html  flight_path_JFK_LAX.html  on_time_rate_by_airline.html  route_options_JFK_LAX.html  value_score_by_airline.html
scripts/: custom_test.py  run_analysis.py
src/flight_value_checker/: __init__.py  clean.py  cli.py  ingest.py  rank.py  report.py  scrape_static.py  visualize.py
tests/: test_clean.py  test_cli.py  test_ingest.py  test_rank.py  test_visualize_report_scrape.py
tests/fixtures/: sample_flights.csv
